--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -14,6 +14,7 @@ $element-height: 2.4em;
     margin-left: 2%;
     padding: 0.8em;
     width: 23%;
+    text-decoration: none;
   }
   
   .inp-container {
@@ -79,3 +80,113 @@ $element-height: 2.4em;
      display: inline-block;
      margin-right: 0.5em;
   }
+
+.list-icon {
+  .cart-item-count {
+    border-radius: 50%;
+    background-color: gold;
+    position: absolute;
+    height: 1em;
+    width: 1em;
+    left: 95.3%;
+    top: 2.4%;
+    text-align: center;
+    line-height: 90%;
+
+    p{
+      font-size: 0.8em;
+      font-weight: 600;
+      color: black;
+    }
+  }
+}
+
+
+//mobile veiw
+
+.mb-container {
+  padding: 1em;
+}
+.input-mb-container {
+  margin: auto;
+  border-radius: 8px;
+
+  input {
+    display: inline-block;
+    width: 60%;
+    border-radius: 0;
+  }
+
+  .mb-dropdown {
+    width: 25%;
+    border-radius: 8px 0 0 8px;
+  }
+  button{
+    width: 15%;
+    border: none;
+    background: #dadada;
+    height: $element-height;
+    border-radius: 0 8px 8px 0;
+  }
+}
+.mb-header-row {
+  color: white;
+  
+  .row-child {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    .mb-brand {
+      text-decoration: none;
+    }
+    .mb-login {
+      display: flex;
+      a{
+        color: white;
+      }
+    }
+    .mb-cart-wishlist {
+      ul{
+        display: flex;
+        align-items: center;
+        margin-top: 1em;
+        gap: 1em;
+
+        li {
+          list-style: none;
+          i{
+            color: white
+          }
+        }
+      }
+    }
+  }
+}
+
+.b-list-icon {
+  .cart-item-count {
+    border-radius: 50%;
+    background-color: gold;
+    position: absolute;
+    height: 1em;
+    width: 1em;
+    left: 88.4%;
+    top: 1%;
+    text-align: center;
+    line-height: 90%;
+
+    p{
+      font-size: 0.8em;
+      font-weight: 600;
+      color: black;
+    }
+  }
+}
+@media screen and (width <= 500px) {
+  .b-list-icon{
+    .cart-item-count{
+      left: 93.2%;
+    }
+  }
+}
+
