--- a/src/components/_cart.scss
+++ b/src/components/_cart.scss
@@ -19,10 +19,10 @@
 }
 
 .fc-main-div {
-    text-align: center;
+    // text-align: center;
     width: 70%;
     margin: auto;
-
+     display: flex;
     .cart-item-card {
 
         img {
@@ -67,6 +67,21 @@
         .summary-total {
             color: black;
             font-weight: 550;
+        }
+    }
+}
+
+@media screen and (width <= 768px) {
+    .ec-main-div {
+        .ec-text {
+            font-size: 1.5em;
+        }
+    }
+    .fc-main-div {
+        flex-direction: column-reverse;
+
+        .cart-summary {
+            width: 100%;
         }
     }
 }
