--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -53,16 +53,18 @@ $element-height: 2.4em;
     text-align: right;
     margin: 1.7em 0.2em 0 0;
   }
-  .login-container h5, i{
-    display: inline-block;
-  }
+  .login-container a{
+    h5, i{
+      display: inline-block;
+    }
+  } 
   
   .login-container a{
     text-decoration: none;
     color: white;
   }
   .user-icon {
-    margin-right: 0.4em;
+    margin-left: 0.4em;
     padding: 0.2em;
     font-size: $icon-font;
   }
@@ -131,7 +133,7 @@ $element-height: 2.4em;
 }
 .mb-header-row {
   color: white;
-  
+  padding: 0.5em;
   .row-child {
     display: flex;
     justify-content: space-around;
@@ -143,13 +145,18 @@ $element-height: 2.4em;
       display: flex;
       a{
         color: white;
+        text-decoration: none;
+
+        h5 ,i {
+          display: inline-block;
+        }
       }
     }
     .mb-cart-wishlist {
       ul{
         display: flex;
         align-items: center;
-        margin-top: 1em;
+        margin-top: 0.7em;
         gap: 1em;
 
         li {
@@ -185,7 +192,8 @@ $element-height: 2.4em;
 @media screen and (width <= 500px) {
   .b-list-icon{
     .cart-item-count{
-      left: 93.2%;
+      left: 90.5%;
+      top: 1.4%;
     }
   }
 }
